fixed parts of cards being hidden under navbar

--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@
   align-items: center;
   height: 100%;
   margin-top: 1rem;
+  margin-bottom: 4.5rem;
 }
 
 body {
